--- a/src/app/dashboard/filters/filter-destination/filter-destination.component.html
+++ b/src/app/dashboard/filters/filter-destination/filter-destination.component.html
@@ -6,7 +6,7 @@
     [formControl]="searchCity"
     [matAutocomplete]="auto">
   <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
-    <mat-option *ngIf="isLoading" class="is-loading"><mat-spinner diameter="50"></mat-spinner></mat-option>
+    <mat-option *ngIf="isLoading" class="is-loading"><mat-spinner color="accent" diameter="30"></mat-spinner></mat-option>
     <ng-container *ngIf="!isLoading">
       <mat-option *ngFor="let city of suggestedCities" [value]="city" (onSelectionChange)="cityChange(city)">
         <span>{{ city.name }}</span>
