--- a/src/scss/filters.scss
+++ b/src/scss/filters.scss
@@ -5,18 +5,22 @@
 }
 .btn {
   display: flex;
-  padding: 15px 40px;
+  padding: 10px 20px;
   justify-content: center;
   align-items: center;
   border-radius: 100px;
-  min-width: 200px;
+  min-width: 170px;
   border: none;
   cursor: pointer;
   transition: background-color .3s;
   color: $brown;
   box-shadow: 0 0 4px rgba(0,0,0,.35);
+  &-big {
+    padding: 15px 50px;
+  }
   &-hover-pink:hover {
     background: $pink;
+    color: $white;
   }
   &-green {
     background: $light-green;
@@ -41,4 +45,9 @@
 .mat-step-header .mat-step-icon-state-edit {
   background: $yellow !important;
 }
+.mat-calendar,
+.mat-dialog-container {
+  background: $pink !important;
+}
+
 
