starts styling generated list

--- a/src/app/generated-list-wrapper/generated-list-wrapper.component.html
+++ b/src/app/generated-list-wrapper/generated-list-wrapper.component.html
@@ -1,2 +1,6 @@
-<qpac-list-title></qpac-list-title>
-<qpac-generated-list></qpac-generated-list>
+
+<div class="container">
+    <qpac-list-title></qpac-list-title>
+    <qpac-generated-list></qpac-generated-list>
+</div>
+
