--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,7 @@
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
 @import "./scss/variables";
+@import "./scss/buttons";
 @import "./scss/filters";
 
 
