--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -5,7 +5,7 @@
   background: $light-gray;
 }
 mat-vertical-stepper {
-  background: #69f0ae;
+  background: $green;
   padding: 10px 60px;
   border-radius: 3px;
   box-shadow: 0 0 10px rgba(0,0,0,.4);
