--- a/src/app/generated-list-wrapper/generated-list-wrapper.component.html
+++ b/src/app/generated-list-wrapper/generated-list-wrapper.component.html
@@ -1,6 +1,8 @@
 
 <div class="container">
-    <qpac-list-title></qpac-list-title>
-    <qpac-generated-list></qpac-generated-list>
+    <div class="generated-list">
+        <qpac-list-title></qpac-list-title>
+        <qpac-generated-list></qpac-generated-list>
+    </div>
 </div>
 
