--- a/src/app/generated-list-wrapper/pack-item/pack-item.component.scss
+++ b/src/app/generated-list-wrapper/pack-item/pack-item.component.scss
@@ -1,11 +1,35 @@
+@import "../../../scss/variables";
 .pack-item {
   background: #f0f8ff;
   padding: 15px;
-  border-radius: 4px;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  border-radius: 100px;
+  position: relative;
+  margin-right: 40px;
+  &-weight {
+    position: absolute;
+    top: 4px;
+    right: 4px;
+    bottom: 4px;
+    background: $light-green;
+    border-radius: 100px;
+    display: flex;
+    align-items: center;
+    padding: 0 30px;
+  }
   i {
     cursor: pointer;
+    position: absolute;
+    right: -35px;
+    opacity: .6;
+    transition: opacity .3s;
+    &:hover {
+      opacity: 1;
+    }
   }
 }
+mat-checkbox {
+  margin-right: 30px;
+}
+
