--- a/src/app/generated-list-wrapper/generated-list/generated-list.component.html
+++ b/src/app/generated-list-wrapper/generated-list/generated-list.component.html
@@ -14,7 +14,7 @@
           Uncheck All
         </mat-radio-button>
 
-        <mat-radio-button  (change)="checkAll()" value="uncheck">
+        <mat-radio-button (change)="checkAll()" value="uncheck">
           Check All
         </mat-radio-button>
       </mat-radio-group>
@@ -25,27 +25,27 @@
     </div>
   </div>
   <h2>General List</h2>
+  <div class="filter-list">
+    <p>Highlight the category</p>
+    <button mat-button class="filter-button" id="{{item.value}}" *ngFor="let item of categories$ | async; let i = index"
+      (click)="selecFilter($event)">
+      <span> <i class="material-icons">{{icons[i]}}</i> {{ item.value }} </span>
+    </button>
+  </div>
   <div class="pack-items">
     <ul *ngFor="let items of listItems">
-      <li *ngFor="let item of items">
-          <qpac-pack-item
-                  (removeById)="removeById($event)"
-                  [isChecked]="isCheckedAll"
-                  [item]="item" >
-          </qpac-pack-item>
-        </li>
+      <li [ngStyle]="{'color': item.selectedColor}" *ngFor="let item of items">
+        <qpac-pack-item (removeById)="removeById($event)" [isChecked]="isCheckedAll" [item]="item">
+        </qpac-pack-item>
+      </li>
     </ul>
   </div>
   <div *ngIf="isOpenAddedField" class="add-item">
-    <input #newItem  type="text">
-    <button mat-raised-button
-            color="accent"
-            (click)="addNewItem(newItem)">
+    <input #newItem type="text">
+    <button mat-raised-button color="accent" (click)="addNewItem(newItem)">
       Add
     </button>
-    <button  mat-raised-button
-             color="accent"
-            (click)="toggleAddedField()">
+    <button mat-raised-button color="accent" (click)="toggleAddedField()">
       Cancel
     </button>
   </div>
@@ -56,5 +56,3 @@
     <button mat-raised-button color="accent">Save you list</button>
   </div>
 </div>
-
-
