--- a/src/app/generated-list-wrapper/generated-list-wrapper.component.html
+++ b/src/app/generated-list-wrapper/generated-list-wrapper.component.html
@@ -1,7 +1,9 @@
+<qpac-header></qpac-header>
 
 <div class="container">
     <div class="generated-list">
         <qpac-list-title></qpac-list-title>
+        <qpac-weather-display></qpac-weather-display>
         <qpac-generated-list></qpac-generated-list>
     </div>
 </div>
