Auth page styling end

--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -23,19 +23,19 @@
 
   <section class="pictures">
     <article>
-      <img class="bg-article1" src="../../assets/img/article_sprite.png" alt="Active leisure">
+      <img src="../../assets/img/article1.png" alt="Active leisure">
       <p>{{ 'auth.section.article-one.text' | translate}}</p>
     </article>
     <article>
-      <img class="bg-article2" src="../../assets/img/article_sprite.png" alt="Business trip">
+      <img src="../../assets/img/article2.png" alt="Business trip">
       <p>{{ 'auth.section.article-two.text' | translate}}</p>
     </article>
     <article>
-      <img class="bg-article3" src="../../assets/img/article_sprite.png" alt="Family vacation">
+      <img src="../../assets/img/article3.png" alt="Family vacation">
       <p>{{ 'auth.section.article-three.text' | translate}}</p>
     </article>
     <article>
-      <img class="bg-article4" src="../../assets/img/article_sprite.png" alt="Tourism">
+      <img src="../../assets/img/article4.png" alt="Tourism">
       <p>{{ 'auth.section.article-four.text' | translate}}</p>
     </article>
   </section>
