--- a/src/app/auth/auth.component.scss
+++ b/src/app/auth/auth.component.scss
@@ -1,56 +1,106 @@
 .wrapper {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    justify-content: flex-start;
+    align-items: stretch;
+    align-content: stretch;
     width: 100%;
     height: 100%;
+    font-family: 'Open Sans';
+    font-size: 16px;
+    background-color: #eaeaea;
 
     .header {
         display: flex;
         justify-content: space-around;
         width: 100%;
-        height: 7%;
-        padding: 1rem;
+        height: 10%;
+        padding: 0.5rem;
 
         .header-logo {
-            width: 15%;
-            height: 15%;
+            height: 100%;
+            z-index: 99;
         }
     }
 
     .form-wrapper {
+        display: flex;
         width: 100%;
-        height: 54vh;
+        min-height: 660px;
+        margin-top: -2rem;
         background-size: cover;
         background-image: url('../../assets/img/headpic.png');
+        object-fit: scale-down;
+
+        .auth-form {
+            width: 30%;
+            margin: auto;
+            margin-right: 5rem;
+            background-color: rgba(0, 0, 0, 0.0);
+            box-shadow: none;
+
+            .mat-card-title {
+                font-family: 'OpenSans';
+                font-size: 2vw;
+                text-align: left;
+                color: #ffffff;
+            }
+
+            .mat-card-subtitle {
+                font-family: 'OpenSans';
+                font-size: 1vw;
+                color: #ffffff;
+            }
+
+            .mat-raised-button {
+                font-size:1vw;
+                margin-bottom: 15px;
+                width: 60%;
+                border: 1px solid;
+                border-radius: 20px;
+                min-width: 170px;
+                border: none;
+                cursor: pointer;
+            }
+
+            .mat-raised-button:hover {
+                box-shadow: inset 0 0 3px 3px rgba(0,0,0,0.5);
+              }
+
+              .social-login-btn {
+                text-align: justify;
+
+                i{
+                    margin-right: 10px;
+                    font-size: 1rem;
+                }
+            }
+        }
     }
 
     .pictures {
-        width: 83.2%;
-        height: 28.3%;
         display: flex;
-        justify-content: space-around;
-        flex-wrap: nowrap;
+        flex-flow: row nowrap;
+        height: 100%;
+        width: 83.2%;
+        margin: 2rem auto;
 
         article {
-            width: 24%;
-        }
+            width: 30%;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
 
-        .bg-article1 {
-            width: 165px; height: 177px;
-            background: url('../../assets/img/article_sprite.png') -202px -0;
-        }
-        .bg-article2 {
-            width: 146px; height: 164px;
-            background: url('../../assets/img/article_sprite.png') -0 -182px;
-        }
-        .bg-article3 {
-            width: 202px; height: 182px;
-            background: url('../../assets/img/article_sprite.png') -0 -0;
-        }
-        .bg-article4 {
-            width: 104px; height: 163px;
-            background: url('../../assets/img/article_sprite.png') -146px -182px;
+            img {
+                height: 90%;
+                margin: 1rem auto;
+            }
+
+            p {
+                text-align: center;
+                font-size: 1.5vw;
+            }
         }
     }
 }
@@ -59,18 +109,6 @@
 
 
 
-.auth-form {
-    max-width: 400px;
-    margin: 0 auto;
-    text-align: center;
-    .social-login-btn {
-        margin-bottom: 15px;
-        width: 100%;
-        i{
-            margin-right: 10px;
-            font-size: 24px;
-        }
-    }
-}
+
 
 
