--- a/src/app/generated-list-wrapper/list-title/list-title.component.html
+++ b/src/app/generated-list-wrapper/list-title/list-title.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar>
   <form class="example-form">
     <mat-form-field class="example-full-width">
-      <input matInput (keyup)="onKey($event)" type="text" [formControl]="name">
+      <input matInput (keyup)="onKey()" type="text" [formControl]="name">
     </mat-form-field>
   </form>  
 </mat-toolbar>
