--- a/src/app/auth/auth.component.scss
+++ b/src/app/auth/auth.component.scss
@@ -4,31 +4,39 @@
     justify-content: flex-start;
     align-items: stretch;
     align-content: stretch;
-    width: 100%;
+    max-width: 97.5%;
     height: 100%;
     font-family: 'Open Sans';
     font-size: 16px;
     background-color: #eaeaea;
+    margin: 0 auto;
 
     .header {
         display: flex;
         justify-content: space-around;
         width: 100%;
-        height: 10%;
+        max-height: 10vh;
         padding: 0.5rem;
 
         .header-logo {
-            height: 100%;
-            z-index: 99;
+            width: 20%;
+            height: 5%;
+            z-index: 1;
+        }
+        qpac-language-switcher {
+            width: 20%;
+            height: 5%;
         }
     }
 
     .form-wrapper {
         display: flex;
-        width: 100%;
-        min-height: 660px;
-        margin-top: -2rem;
+        width: 90%;
+        margin: 0 auto;
+        min-height: 70vh;
+        margin-top: -2vh;
         background-size: cover;
+        background-position: center;
         background-image: url('../../assets/img/headpic.png');
         object-fit: scale-down;
 
@@ -80,26 +88,34 @@
 
     .pictures {
         display: flex;
-        flex-flow: row nowrap;
+        flex-direction: row;
         height: 100%;
-        width: 83.2%;
-        margin: 2rem auto;
+        width: 75%;
+        margin: 1rem auto;
+        @media (max-width: 767px) {
+            flex-wrap: wrap;
+        }
 
         article {
-            width: 30%;
+            width: 25%;
             height: 100%;
             display: flex;
             flex-direction: column;
             align-items: center;
+            @media (max-width: 767px) {
+                width: 50%;
+            }
 
             img {
-                height: 90%;
+                max-width: 100%;
+                height: 70%;
+                max-height: 170px;
                 margin: 1rem auto;
             }
 
             p {
                 text-align: center;
-                font-size: 1.5vw;
+                font-size: 1.2vw;
             }
         }
     }
