Added weather icons, transleted some variables

--- a/src/app/generated-list-wrapper/generated-list/generated-list.component.html
+++ b/src/app/generated-list-wrapper/generated-list/generated-list.component.html
@@ -13,7 +13,7 @@
     </div>
     <div class="item-details">
       <h3>Total weight</h3>
-      <div class="item-details-weight">{{ totalWeight }}kg</div>
+      <div class="item-details-weight">{{ totalWeight }} {{ 'generatedList.items.weight.kg' | translate }}</div>
     </div>
   </div>
   <h2>General List</h2>
