--- a/src/app/generated-list-wrapper/weather-display/weather-display.component.html
+++ b/src/app/generated-list-wrapper/weather-display/weather-display.component.html
@@ -1,9 +1,10 @@
 <div *ngIf="response | async as responses">
-  <div *ngFor="let attr of responses">
-    <ul>
-      <li> {{ 'weather.display.temperature.text' | translate }} {{ attr.currently.temperature | json }} &#8451; </li>
-      <li> {{ 'weather.display.summary.text' | translate}} {{ attr.currently.summary | json }} </li>
-      <li> {{ 'weather.display.location.text' | translate}} {{ attr.timezone | json }} </li>
-    </ul>
+  <div class="weatherWrapper" *ngFor="let attr of responses">
+      <div [attr.class]="weatherIcon | async"></div>
+      <ul>
+        <li> {{ 'weather.display.temperature.text' | translate }} {{ attr.currently.temperature | json }} &#8451; </li>
+        <li> {{ 'weather.display.summary.text' | translate}} {{ attr.currently.summary | json }} </li>
+        <li> {{ 'weather.display.precip.text' | translate}} {{ attr.currently.precipProbability | json }}</li>
+      </ul>
   </div>
 </div>
