--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -1,8 +1,13 @@
 @import "../../scss/variables";
+@import "../../scss/mixins";
+
 .container {
   min-height: 100vh;
   padding: 30px 100px;
   background: $light-gray;
+  @include respond(medium) {
+    padding: 10px;
+  }
 }
 mat-vertical-stepper {
   background: $green;
@@ -10,13 +15,22 @@ mat-vertical-stepper {
   border-radius: 3px;
   box-shadow: 0 0 10px rgba(0,0,0,.4);
   color: $brown;
-  width: 540px;
+  max-width: 540px;
+  @include respond(medium) {
+    padding: 10px;
+  }
 }
 .generate-wrap {
   margin-top: 40px;
+  @include respond(medium) {
+    margin-top: 20px;
+  }
 }
 .filter-title {
   color: $brown;
   font-size: 25px;
   font-weight: normal;
+  @include respond(medium) {
+    font-size: 20px;
+  }
 }
