--- a/src/app/generated-list-wrapper/generated-list-wrapper.component.scss
+++ b/src/app/generated-list-wrapper/generated-list-wrapper.component.scss
@@ -1,12 +1,19 @@
 @import "../../scss/variables";
+@import "../../scss/mixins";
 
 .container {
   padding: 30px 100px;
   min-height: 100vh;
   background-color: $light-gray;
   border-right: 4px;
+  @include respond(medium) {
+    padding: 10px;
+  }
 }
 .generated-list {
-  width: 740px;
+  max-width: 740px;
   background: $green;
+  @include respond(medium) {
+    display: block;
+  }
 }
