--- a/src/app/generated-list-wrapper/generated-list-wrapper.component.html
+++ b/src/app/generated-list-wrapper/generated-list-wrapper.component.html
@@ -2,9 +2,11 @@
 <div class="container">
     <div class="generated-list">
         <qpac-list-title [listTitle]="listName" (titleForList)="handleTitleChange($event)"></qpac-list-title>
-        <qpac-weather-display></qpac-weather-display>
-        <qpac-generated-list [list]="generatedList" *ngIf="generatedList"></qpac-generated-list>
-
+        <mat-option *ngIf="isLoading" class="is-loading"><mat-spinner color="accent" diameter="30"></mat-spinner></mat-option>
+        <ng-container *ngIf="!isLoading">
+            <qpac-weather-display></qpac-weather-display>
+            <qpac-generated-list [list]="generatedList" *ngIf="generatedList"></qpac-generated-list>
+        </ng-container>
         <div class="p">
             <button mat-raised-button color="accent" (click)="saveList()">{{ 'generatedList.items.saveList.text' | translate }}</button>
         </div>
