All 3 activities valid

--- a/src/app/dashboard/filters/filter-activities/filter-activities.component.html
+++ b/src/app/dashboard/filters/filter-activities/filter-activities.component.html
@@ -1,8 +1,8 @@
 <div class="checkbox-wrapper">
     <mat-checkbox color="accent" [(ngModel)]="activities.baby" 
-    (change)="activityChange($event)">{{ 'filters.activities.label.baby' | translate }}</mat-checkbox>
+    (change)="activityChange()">{{ 'filters.activities.label.baby' | translate }}</mat-checkbox>
     <mat-checkbox color="accent" [(ngModel)]="activities.pet" 
-    (change)="activityChange($event)">{{ 'filters.activities.label.pet' | translate }}</mat-checkbox>
+    (change)="activityChange()">{{ 'filters.activities.label.pet' | translate }}</mat-checkbox>
     <mat-checkbox color="accent" [(ngModel)]="activities.sport" 
     (change)="activityChange()">{{ 'filters.activities.label.sport' | translate }}</mat-checkbox>
 </div>
