--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -4,6 +4,7 @@
   </div>
 <span class="toolbar-header">Quick Pack</span>
   <span class="example-fill-remaining-space"></span>
+  <span matBadge="{{listNumber}}" matBageOverlap="false" matBadgeColor="warn"><a [routerLink]="['/dashboard/my-lists']">My lists</a></span>
   <span>{{ 'header.greeting.text' | translate}} {{currentUser.displayName || 'header.greeting.guest.text' | translate }}</span>
   <div>
     <img [matMenuTriggerFor]="menu" class="user-pic" [src]="currentUser.photoURL || defaultAvatar" alt="picture" width="40px"
