--- a/src/app/generated-list-wrapper/generated-list/generated-list.component.html
+++ b/src/app/generated-list-wrapper/generated-list/generated-list.component.html
@@ -3,11 +3,11 @@
     <div>
       <mat-radio-group>
 
-        <mat-radio-button (change)="checkAll()" value="uncheck">
+        <mat-radio-button (change)="toggleAll(true)" value="uncheck">
           {{ 'generatedList.items.checkAll.text' | translate }}
         </mat-radio-button>
 
-        <mat-radio-button (change)="uncheckAll()" value="check">
+        <mat-radio-button (change)="toggleAll(false)" value="check">
           {{ 'generatedList.items.uncheckAll.text' | translate }}
         </mat-radio-button>
 
@@ -25,7 +25,11 @@
         <h2>{{items[0].activities}}</h2>
         <ul>
           <li [ngStyle]="{'color': item.selectedColor}" *ngFor="let item of items">
-            <qpac-pack-item (removeById)="removeById($event, i)" [isChecked]="isCheckedAll" [item]="item">
+            <qpac-pack-item
+              (removeById)="removeById($event, i); list"
+              [isChecked]="item.checked"
+              (checkedChange)="item.checked = $event; listUpdate.emit(list)"
+              [item]="item">
             </qpac-pack-item>
           </li>
         </ul>
