--- a/src/app/generated-list-wrapper/generated-list/generated-list.component.html
+++ b/src/app/generated-list-wrapper/generated-list/generated-list.component.html
@@ -24,7 +24,7 @@
       <div class="pack-items" *ngFor="let items of list; let i = index;">
         <h2>{{ lang === 'Ua' || lang === undefined ? items[0].activitiesUa : items[0].activities }}</h2>
         <ul>
-          <li [ngStyle]="{'color': item.selectedColor}" *ngFor="let item of items">
+          <li *ngFor="let item of items">
             <qpac-pack-item (removeById)="removeById($event, i)" [isChecked]="isCheckedAll" [item]="item">
             </qpac-pack-item>
           </li>
@@ -34,10 +34,11 @@
 
     <div>
       <h3 class="title-filter">{{ 'generatedList.items.filters.header.text' | translate}}</h3>
-      <button mat-button class="filter-button" id="{{item.value}}" *ngFor="let item of categories$ | async; let i = index"
-        (click)="selecFilter($event)">
-        <span> <i class="material-icons"> {{icons[i]}} </i> {{ lang === 'Ua' || lang === undefined ? item.valueUa : item.value }} </span>
-      </button>
+      <mat-radio-button id="{{item.value}}" *ngFor="let item of categories$ | async; let i = index"
+      (click)="selecFilter($event)">
+      <span *ngIf="lang === 'Ua'"> <i class="material-icons"> {{icons[i]}} </i> {{ item.valueUa }} </span>
+      <span *ngIf="lang === 'En'"> <i class="material-icons"> {{icons[i]}} </i> {{ item.value }} </span>
+      </mat-radio-button>
     </div>
   </div>
 
