--- a/src/app/auth/auth.component.scss
+++ b/src/app/auth/auth.component.scss
@@ -11,6 +11,9 @@
     margin: 0 auto;
     qpac-language-switcher {
         align-self: center;
+        @media (max-width: 767px) {
+            text-align: right;
+        }
     }
     .header {
         box-sizing: border-box;
@@ -24,11 +27,13 @@
             width: 20%;
             height: 5%;
             z-index: 1;
+            @media (max-width: 767px) {
+                width: 35%;
+                height: 15%;
+                z-index: 1;
+            }
         }
 
-        qpac-language-switcher {
-            margin-top: -1%;
-        }
 
         .mat-form-field-wrapper {
             width: 15%;
@@ -55,14 +60,14 @@
 
             .mat-card-title {
                 font-family: 'OpenSans';
-                font-size: 2vw;
+                font-size: 28px;
                 text-align: left;
                 color: #ffffff;
             }
 
             .mat-card-subtitle {
                 font-family: 'OpenSans';
-                font-size: 1vw;
+                font-size: 14px;
                 color: #ffffff;
             }
 
@@ -75,6 +80,9 @@
                 min-width: 170px;
                 border: none;
                 cursor: pointer;
+                @media (max-width: 767px) {
+                    font-size: 10px;
+                }
             }
 
             .mat-raised-button:hover {
@@ -121,7 +129,10 @@
 
             p {
                 text-align: center;
-                font-size: 1.2vw;
+                font-size: 18px;
+                @media (max-width: 767px) {
+                    font-size: 16px;
+                }
             }
         }
     }
