--- a/src/app/saved-lists/saved-lists.component.scss
+++ b/src/app/saved-lists/saved-lists.component.scss
@@ -40,6 +40,7 @@
         i {
             font-size: 3vw;
             color: $white;
+            cursor: pointer;
         }
     }
     @include respond(medium) {
