--- a/src/app/saved-lists/saved-lists.component.scss
+++ b/src/app/saved-lists/saved-lists.component.scss
@@ -17,9 +17,11 @@
     background: $green;
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 1, 0.25);
     &-header {
-        padding: 4vw;
-        margin: 1%;
-        font-size: 2vw;
+        padding: 40px;
+        @include respond(medium) {
+            padding: 10px;
+          }
+        font-size: 1.8rem;
     }
     ul {
         padding: 0;
@@ -30,15 +32,19 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        padding: 5%;
-        margin-bottom: 2%;
-        font-size: 2vw;
+        padding: 40px;
+        margin-bottom: 20px;
+        @include respond(medium) {
+            padding: 20px;
+            margin-bottom: 10px;
+          }
+        font-size: 1.4rem;
         a {
             text-decoration: none;
             color: $white;
         }
         i {
-            font-size: 3vw;
+            font-size: 2rem;
             color: $white;
             cursor: pointer;
         }
