--- a/src/app/generated-list-wrapper/generated-list-wrapper.component.html
+++ b/src/app/generated-list-wrapper/generated-list-wrapper.component.html
@@ -3,14 +3,15 @@
     <div class="generated-list">
         <div class="generated-list-header">
             <qpac-list-title [listTitle]="listName" (titleForList)="handleTitleChange($event)" *ngIf="listName"></qpac-list-title>
-            <qpac-weather-display></qpac-weather-display>
+            <!-- <qpac-weather-display></qpac-weather-display> -->
         </div>
         <mat-option *ngIf="isLoading" class="is-loading"><mat-spinner color="accent" diameter="30"></mat-spinner></mat-option>
         <ng-container *ngIf="!isLoading">
             <qpac-generated-list [list]="generatedList" *ngIf="generatedList" (listUpdate)="updateList($event)"></qpac-generated-list>
         </ng-container>
         <div class="btn-save">
-            <button class="btn btn-big btn-teal btn-text-white" (click)="saveList()">{{ 'generatedList.items.saveList.text' | translate }}</button>
+            <button *ngIf="userData && userData.isAnonymous" class="btn btn-big btn-teal btn-text-white" (click)="saveList()">{{ 'generatedList.items.saveList.text' | translate }}</button>
+            <ng-template #notAvailable><span> You can't save lists in Guest mode</span></ng-template>
         </div>
     </div>
 </div>
